--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.Securinzy"
         tools:targetApi="31">
         <activity
+            android:name=".pentestActivity"
+            android:exported="false" />
+        <activity
             android:name=".ServicesActivity"
             android:banner="@drawable/app_icon_your_company"
             android:exported="true"
