--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         tools:targetApi="31">
         <activity
             android:name=".pentestActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:parentActivityName=".ServicesActivity"/>
         <activity
             android:name=".ServicesActivity"
             android:banner="@drawable/app_icon_your_company"
