--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -9,7 +10,7 @@
         android:required="false" />
     <uses-feature
         android:name="android.software.leanback"
-        android:required="true" />
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -22,32 +23,16 @@
         android:theme="@style/Theme.Securinzy"
         tools:targetApi="31">
         <activity
+            android:name=".SERVICES"
+            android:exported="false" />
+        <activity
+            android:name=".network"
+            android:exported="true"
+            android:parentActivityName=".SERVICES" />
+        <activity
             android:name=".pentestActivity"
             android:exported="true"
-            android:parentActivityName=".ServicesActivity"/>
-        <activity
-            android:name=".ServicesActivity"
-            android:banner="@drawable/app_icon_your_company"
-            android:exported="true"
-            android:icon="@drawable/app_icon_your_company"
-            android:label="@string/title_activity_services"
-            android:logo="@drawable/app_icon_your_company"
-            android:screenOrientation="landscape">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".DetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PlaybackActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BrowseErrorActivity"
-            android:exported="false" />
+            android:parentActivityName=".SERVICES" />
         <activity
             android:name=".signup"
             android:exported="false"
@@ -55,10 +40,11 @@
             android:theme="@style/Theme.Securinzy" />
         <activity
             android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Securinzy"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
