--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:exported="true"
             android:parentActivityName=".SERVICES" />
         <activity
+            android:name=".services"
+            android:exported="false" />
+        <activity
             android:name=".signup"
             android:exported="false"
             android:label="@string/title_activity_signup"
