--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -23,6 +22,16 @@
         android:theme="@style/Theme.Securinzy"
         tools:targetApi="31">
         <activity
+            android:name=".booking"
+            android:exported="false"
+            android:label="@string/title_activity_booking"
+            android:theme="@style/Theme.Securinzy" />
+        <activity
+            android:name=".softwareTesting"
+            android:exported="false"
+            android:label="@string/title_activity_software_testing"
+            android:theme="@style/Theme.Securinzy" />
+        <activity
             android:name=".SERVICES"
             android:exported="false" />
         <activity
@@ -43,11 +52,12 @@
             android:theme="@style/Theme.Securinzy" />
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Securinzy"
-            android:exported="true">
+            android:theme="@style/Theme.Securinzy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
