--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,16 @@
         android:theme="@style/Theme.Securinzy"
         tools:targetApi="31">
         <activity
+            android:name=".Splash_screen"
+            android:exported="false" />
+        <activity
             android:name=".booking"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_booking"
             android:theme="@style/Theme.Securinzy" />
         <activity
             android:name=".softwareTesting"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_software_testing"
             android:theme="@style/Theme.Securinzy" />
         <activity
